--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,10 @@
 {
-  "ConnectionStrings": {
-    "SqliteDb": "Data Source=MyDatabase.db"
+  "JwtTokenSettings": {
+    "ValidIssuer": "ExampleIssuer",
+    "ValidAudience": "ExampleAudience",
+    "SymmetricSecurityKey": "v89h3bh89vh9ve8hc89nv98nn899cnccn998ev80vi809jberh89b"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
